test/ingress-tmp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test2
  namespace: test
  labels:
    test: test22
spec:
  rules:
    - host: test.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: test
                port:
                  number: 8080
