test/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  namespace: test
  labels:
    test: test22
spec:
  rules:
    - host: test.com
      http:
        paths:
          - path: /
            backend:
              serviceName: test
              servicePort: 8080
